# snow-mk2

./: Cargo.toml
src/: gfx.rs  main.rs  snow.rs  utils.rs
src/shaders/: rect.wgsl  render.wgsl  simulate.wgsl
