[package]
name = "snow-mk2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
core-graphics = "0.23.1"
icrate = { version = "0.1.0", features = ["AppKit_all", "Foundation_all"] }
objc2 = "0.5.0"
pollster = "0.3.0"
rand = "0.8.5"
raw-window-handle = "0.5.0"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "0.18.0"
winit = { version = "0.29.9", default-features = false, features = ["rwh_05"] }
wrld = "1.0.0"


